--- a/TimeSheet-Web/src/app/modules/login/login.component.html
+++ b/TimeSheet-Web/src/app/modules/login/login.component.html
@@ -1,23 +1,46 @@
-<div class="container">
-    <div class="login">
-        <mat-card class="card mat-elevation-z8">
-            <mat-card-header class="header">
-                <h2>Login</h2>
-            </mat-card-header>
-            <mat-card-content class="content">
+<div class="page-login">
+    <mat-card class="card-login">
+        <div class="row">
+            <div class="col-8 col-sm-8">
+                <img src="./assets/img/timesheet.png" class="img-login">
+            </div>
+            <div class="col-4 col-sm-4 card-btn-login">
                 <form [formGroup]="formLogin" (ngSubmit)="submit()">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Username</mat-label>
-                        <input matInput formControlName="userCode" name="userCode" required>
-                    </mat-form-field>
-                    <mat-form-field appearance="outline">
-                        <mat-label>Password</mat-label>
-                        <input matInput type="password" formControlName="password" name="password" required>
-                    </mat-form-field>
-                    <button mat-raised-button color="primary" type="submit">Login</button>
+                    <div class="row">
+                        <div class="col-12 btn-div-login">
+                            <mat-form-field appearance="outline">
+                                <mat-label>Username</mat-label>
+                                <input matInput formControlName="userCode"
+                                    [ngClass]="{'is-invalid': submitted && f.username.errors}">
+                                <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                                    <div *ngIf="f.username.errors.required" class="text-danger help-block">
+                                        {{'username' | mandatoryfield}}
+                                    </div>
+                                </div>
+                                <mat-icon matSuffix>person</mat-icon>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-12 btn-div-login">
+                            <mat-form-field appearance="outline">
+                                <mat-label>Password</mat-label>
+                                <input type="password" matInput formControlName="password"
+                                    [ngClass]="{'is-invalid': submitted && f.password.errors}">
+                                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                                    <div *ngIf="f.password.errors.required" class="text-danger help-block">
+                                        {{'password' | mandatoryfield}}
+                                    </div>
+                                </div>
+                                <mat-icon matSuffix>vpn_key</mat-icon>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-12 btn-div-login">
+                            <label class="message-error">{{errorMessage}}</label>
+                            <button type="submit" mat-button class="col-6 btn-submit">Login</button>
+                        </div>
+                    </div>
                 </form>
-            </mat-card-content>
-        </mat-card>
-    </div>
+            </div>
+        </div>
+    </mat-card>
 </div>
 
