--- a/TimeSheet-Web/src/app/modules/attendance-supervisor/dialog-assign/dialog-assign.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance-supervisor/dialog-assign/dialog-assign.component.html
@@ -1,47 +1,83 @@
+<div class="row headTilteDialog">
+  <h2 mat-dialog-title>Add Assign Project</h2>
+</div><br>
 
-    <div class="row headTilteDialog">
-      <h3 mat-dialog-title>Add Assign</h3>
+
+
+
+<div mat-dialog-content>
+  <div class="row mt-3">
+    <div class="col-2 mt-2" style="text-align: right;">
+      <mat-label>User Code</mat-label>
     </div>
-  <div>
-    <form  >
-      
-      <div class="row mt-3">
-        <div class="col-sm-3 mt-2" style="text-align: left;">
-          <mat-label>User No</mat-label>
-        </div>
-        <div class="col-12">
-          <input class="form-control" >
+    <div class="col-4">
+      <input class="form-control" formControlName="project"
+        [ngClass]="{'is-invalid': submitted && f.project.errors}">
+      <div *ngIf="submitted && f.project.errors" class="invalid-feedback">
+        <div *ngIf="f.project.errors.required" class="text-danger help-block">
+          <!-- {{'Project' | mandatoryfield}} -->
         </div>
       </div>
-
-      <div class="row mt-3">
-        <div class="col-sm-3 mt-2" style="text-align: left;">
-          <mat-label>Project</mat-label>
-        </div>
-        <div class="col-12">
-          <input class="form-control" >
+      <div *ngIf="submitted && f.project.errors" class="invalid-feedback">
+        <div *ngIf="f.project.errors.whitespace" class="text-danger help-block">
+          <!-- {{'Project' | mandatoryfield}} -->
         </div>
       </div>
-
-      <div class="row mt-3">
-        <div class="col-sm-3 mt-2" style="text-align: left;">
-          <mat-label>Task</mat-label>
-        </div>
-        <div class="col-12">
-          <input class="form-control" >
+    </div>
+    <div class="col-2 mt-2" style="text-align: right;">
+      <mat-label> Project </mat-label>
+    </div>
+    <div class="col-4">
+      <input class="form-control" formControlName="site"
+        [ngClass]="{'is-invalid': submitted && f.site.errors}">
+      <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
+        <div *ngIf="f.site.errors.required" class="text-danger help-block">
+          <!-- {{'Site' | mandatoryfield}} -->
         </div>
       </div>
-
-
-
-
-      
-           
-      <div mat-dialog-actions class="mt-3" style="float: right ;">
-                   <button mat-raised-button class="btn-submit" type="submit">Save</button>
-                  <a mat-raised-button class="btn-cancle"   (click)="closeDialog(false)">Cancel</a>
-                </div>
-  </form>
-
-
+      <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
+        <div *ngIf="f.site.errors.whitespace" class="text-danger help-block">
+          <!-- {{'Site' | mandatoryfield}} -->
+        </div>
+      </div>
+    </div>
   </div>
+
+  <div class="row mt-3">
+    <div class="col-2 mt-2" style="text-align: right;">
+      <mat-label> Description </mat-label>
+    </div>
+    <div class="col-10">
+      <textarea class="form-control" formControlName="task"
+        [ngClass]="{'is-invalid': submitted && f.task.errors}"></textarea>
+      <div *ngIf="submitted && f.task.errors" class="invalid-feedback">
+        <div *ngIf="f.task.errors.required" class="text-danger help-block">
+          <!-- {{'Task' | mandatoryfield}} -->
+        </div>
+      </div>
+      <div *ngIf="submitted && f.task.errors" class="invalid-feedback">
+        <div *ngIf="f.task.errors.whitespace" class="text-danger help-block">
+          <!-- {{'Task' | mandatoryfield}} -->
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-2 mt-2" style="text-align: right;">
+      <mat-label> Date </mat-label>
+    </div>
+    <div class="col-4">       
+        <input class="form-control" formControlName="date" matInput [matDatepicker]="picker">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>        
+    </div>
+  </div>
+
+
+</div>
+
+<div mat-dialog-actions class="mt-3" style="float: right;">
+  <button mat-raised-button type="submit" class="btn-submit">Save</button>
+  <a mat-raised-button class="btn-cancle"(click)="closeDialog(false)">Cancel</a>
+</div>
