--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -20,9 +20,9 @@
   </div><br>
   
   <div style="text-align: right;">
-    <button mat-raised-button class="btn-submit" (click)="openDialogAdd()">
+    <button mat-raised-button class="btn-submit" (click)="back()">
         <mat-icon>work_outline</mat-icon>
-        Time out
+        Back
     </button>
   </div><br>
 
