--- a/TimeSheet-Web/src/app/modules/attendance/add-attendance-dialog/add-attendance-dialog.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/add-attendance-dialog/add-attendance-dialog.component.html
@@ -15,12 +15,12 @@
           [ngClass]="{'is-invalid': submitted && f.project.errors}">
         <div *ngIf="submitted && f.project.errors" class="invalid-feedback">
           <div *ngIf="f.project.errors.required" class="text-danger help-block">
-            {{'Project' | mandatoryfield}}
+            <!-- {{'Project' | mandatoryfield}} -->
           </div>
         </div>
         <div *ngIf="submitted && f.project.errors" class="invalid-feedback">
           <div *ngIf="f.project.errors.whitespace" class="text-danger help-block">
-            {{'Project' | mandatoryfield}}
+            <!-- {{'Project' | mandatoryfield}} -->
           </div>
         </div>
       </div>
@@ -32,12 +32,12 @@
           [ngClass]="{'is-invalid': submitted && f.site.errors}">
         <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
           <div *ngIf="f.site.errors.required" class="text-danger help-block">
-            {{'Site' | mandatoryfield}}
+            <!-- {{'Site' | mandatoryfield}} -->
           </div>
         </div>
         <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
           <div *ngIf="f.site.errors.whitespace" class="text-danger help-block">
-            {{'Site' | mandatoryfield}}
+            <!-- {{'Site' | mandatoryfield}} -->
           </div>
         </div>
       </div>
@@ -52,19 +52,68 @@
           [ngClass]="{'is-invalid': submitted && f.task.errors}"></textarea>
         <div *ngIf="submitted && f.task.errors" class="invalid-feedback">
           <div *ngIf="f.task.errors.required" class="text-danger help-block">
-            {{'Task' | mandatoryfield}}
+            <!-- {{'Task' | mandatoryfield}} -->
           </div>
         </div>
         <div *ngIf="submitted && f.task.errors" class="invalid-feedback">
           <div *ngIf="f.task.errors.whitespace" class="text-danger help-block">
-            {{'Task' | mandatoryfield}}
+            <!-- {{'Task' | mandatoryfield}} -->
           </div>
         </div>
       </div>
     </div>
+
+    <div class="row mt-3">
+      <div class="col-2 mt-2" style="text-align: right;">
+        <mat-label>Time-In</mat-label>
+      </div>
+      <div class="col-4">
+        <input class="form-control" formControlName="project"
+          [ngClass]="{'is-invalid': submitted && f.project.errors}">
+        <div *ngIf="submitted && f.project.errors" class="invalid-feedback">
+          <div *ngIf="f.project.errors.required" class="text-danger help-block">
+            <!-- {{'Time-In' | mandatoryfield}} -->
+          </div>
+        </div>
+        <div *ngIf="submitted && f.project.errors" class="invalid-feedback">
+          <div *ngIf="f.project.errors.whitespace" class="text-danger help-block">
+            <!-- {{'Time-In' | mandatoryfield}} -->
+          </div>
+        </div>
+      </div>
+      <div class="col-2 mt-2" style="text-align: right;">
+        <mat-label> Time-Out </mat-label>
+      </div>
+      <div class="col-4">
+        <input class="form-control" formControlName="site"
+          [ngClass]="{'is-invalid': submitted && f.site.errors}">
+        <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
+          <div *ngIf="f.site.errors.required" class="text-danger help-block">
+            <!-- {{'Time-Out' | mandatoryfield}} -->
+          </div>
+        </div>
+        <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
+          <div *ngIf="f.site.errors.whitespace" class="text-danger help-block">
+            <!-- {{'Time-Out' | mandatoryfield}} -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row mt-3">
+      <div class="col-2 mt-2" style="text-align: right;">
+        <mat-label> Date </mat-label>
+      </div>
+      <div class="col-4">       
+          <input class="form-control" formControlName="date" matInput [matDatepicker]="picker">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>        
+      </div>
+    </div>
+
+
   </div>
 
   <div mat-dialog-actions class="mt-3" style="float: right;">
-    <button mat-button type="submit" class="btn-submit">Save</button>
+    <button mat-raised-button type="submit" class="btn-submit">Save</button>
     <a mat-raised-button class="btn-cancle"(click)="canCle(false)">Cancel</a>
   </div>
