--- a/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
+++ b/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
@@ -127,7 +127,8 @@
     </div>
 
     <div mat-dialog-actions class="mt-3" style="float: right;">
-      <button mat-button type="submit" class="btn-submit" (click)="openDialogEdit()">Edit</button>&nbsp;
+      <button mat-raised-button class="btn-submit">Save</button>&nbsp;
+      <button mat-raised-button type="submit" class="btn-submit" (click)="openDialogEdit()">Edit</button>&nbsp;
       <button mat-raised-button class="btn-cancle" (click)="back()">Back</button>
     </div>
 </div>
