--- a/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
+++ b/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
@@ -2,43 +2,22 @@
 <div class="row headTilteDialog">
     <h3 mat-dialog-title>User Profile</h3>
   </div>
-  <form  class="fillBox" [formGroup]="createProfileGroup" (ngSubmit)="onSubmit()">
-
-    <div mat-dialog-content>
+  <form [formGroup]="createProfile" (ngSubmit)="onSubmit()">
+  
       <div class="row mt-3">
         <div class="col-2 mt-2" style="text-align: right;">
-          <mat-label>First Name </mat-label>
+          <mat-label> First Name </mat-label>
         </div>
         <div class="col-4">
-          <input class="form-control"  formControlName="firstName"
-            [ngClass]="{'is-invalid': submitted && f.firstName.errors}">
-          <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-            <div *ngIf="f.firstName.errors.required" class="text-danger help-block">
-              {{'First Name' | mandatoryfield}}
-            </div>
-          </div>
-          <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-            <div *ngIf="f.name.errors.whitespace" class="text-danger help-block">
-              {{'First Name' | mandatoryfield}}
-            </div>
-          </div>
+          <input class="form-control"  formControlName="firstName">
+
         </div>
         <div class="col-2 mt-2" style="text-align: right;">
           <mat-label> Last Name </mat-label>
         </div>
         <div class="col-4">
-          <input class="form-control"  formControlName="lastName"
-            [ngClass]="{'is-invalid': submitted && f.lastName.errors}">
-          <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-            <div *ngIf="f.lastName.errors.required" class="text-danger help-block">
-              {{'Last Name' | mandatoryfield}}
-            </div>
-          </div>
-          <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-            <div *ngIf="f.lastName.errors.whitespace" class="text-danger help-block">
-              {{'Last Name' | mandatoryfield}}
-            </div>
-          </div>
+          <input class="form-control"  formControlName="lastName">
+
         </div>
       </div>
       
@@ -51,22 +30,13 @@
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>        
         </div>
+
         <div class="col-2 mt-2" style="text-align: right;">
           <mat-label> Age </mat-label>
         </div>
         <div class="col-4">
-          <input class="form-control" formControlName="age"
-            [ngClass]="{'is-invalid': submitted && f.age.errors}">
-          <div *ngIf="submitted && f.age.errors" class="invalid-feedback">
-            <div *ngIf="f.age.errors.required" class="text-danger help-block">
-              {{'Age' | mandatoryfield}}
-            </div>
-          </div>
-          <div *ngIf="submitted && f.age.errors" class="invalid-feedback">
-            <div *ngIf="f.age.errors.whitespace" class="text-danger help-block">
-              {{'Age' | mandatoryfield}}
-            </div>
-          </div>
+          <input class="form-control" formControlName="age">
+
         </div>
       </div>
 
@@ -75,35 +45,14 @@
           <mat-label> Address </mat-label>
         </div>
         <div class="col-4">
-          <textarea class="form-control" formControlName="address"
-            [ngClass]="{'is-invalid': submitted && f.address.errors}"></textarea>
-          <div *ngIf="submitted && f.address.errors" class="invalid-feedback">
-            <div *ngIf="f.address.errors.required" class="text-danger help-block">
-              {{'Address' | mandatoryfield}}
-            </div>
-          </div>
-          <div *ngIf="submitted && f.address.errors" class="invalid-feedback">
-            <div *ngIf="f.address.errors.whitespace" class="text-danger help-block">
-              {{'Address' | mandatoryfield}}
-            </div>
-          </div>
+          <textarea class="form-control" formControlName="address"></textarea>
+
         </div>
         <div class="col-2 mt-2" style="text-align: right;">
           <mat-label> Position </mat-label>
         </div>
         <div class="col-4">
-          <input class="form-control" formControlName="position"
-           [ngClass]="{'is-invalid': submitted && f.position.errors}">
-          <div *ngIf="submitted && f.position.errors" class="invalid-feedback">
-            <div *ngIf="f.position.errors.required" class="text-danger help-block">
-              {{'Position' | mandatoryfield}}
-            </div>
-          </div>
-          <div *ngIf="submitted && f.position.errors" class="invalid-feedback">
-            <div *ngIf="f.position.errors.whitespace" class="text-danger help-block">
-              {{'Position' | mandatoryfield}}
-            </div>
-          </div>
+          <input class="form-control" formControlName="position">         
         </div>
       </div>
 
@@ -112,26 +61,19 @@
           <mat-label> Site </mat-label>
         </div>
         <div class="col-4">
-          <input class="form-control" formControlName="site"
-            [ngClass]="{'is-invalid': submitted && f.site.errors}">
-          <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
-            <div *ngIf="f.site.errors.required" class="text-danger help-block">
-              {{'Site' | mandatoryfield}}
-            </div>
-          </div>
-          <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
-            <div *ngIf="f.site.errors.whitespace" class="text-danger help-block">
-              {{'Site' | mandatoryfield}}
-            </div>
-          </div>
+          <input class="form-control" formControlName="site">
+
         </div>
-      </div>
-    </div>
+      </div>    
   </form>
 
     <div mat-dialog-actions  class="mt-3" style="float: right;">
-      <button mat-raised-button class="btn-submit" type="submit"  (click)="onSave()">Save</button>&nbsp;
+      <!-- <button mat-raised-button class="btn-submit" type="submit"  (click)="onSave()">Save</button>&nbsp; -->
+      <button mat-raised-button class="btn-submit" type="submit">Save</button>&nbsp;
       <button mat-raised-button type="submit" class="btn-submit" (click)="openDialogEdit()">Edit</button>&nbsp;
       <button mat-raised-button class="btn-cancle" (click)="back()">Back</button>
     </div>
 </div>
+
+
+
