--- a/TimeSheet-Web/src/app/modules/attendance/add-attendance-dialog/add-attendance-dialog.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/add-attendance-dialog/add-attendance-dialog.component.html
@@ -3,9 +3,9 @@
   </div><br>
   
 
-  <form [formGroup]="createAttendance" (ngSubmit)="onSave()">
+  <form [formGroup]="createAttendance" (ngSubmit)="onSubmit()">
 
-  <div mat-dialog-content>
+
     <div class="row mt-3">
       <div class="col-2 mt-2" style="text-align: right;">
         <mat-label>Project</mat-label>
@@ -51,8 +51,8 @@
       <div class="col-10">
         <textarea class="form-control" formControlName="task"
           [ngClass]="{'is-invalid': submitted && f.task.errors}"></textarea>
-        <div *ngIf="submitted && f.task.errors" class="invalid-feedback">
-          <!-- <div *ngIf="f.task.errors.required" class="text-danger help-block">
+        <!-- <div *ngIf="submitted && f.task.errors" class="invalid-feedback">
+          <div *ngIf="f.task.errors.required" class="text-danger help-block">
             {{'Task' | mandatoryfield}}
           </div>
         </div>
@@ -63,7 +63,7 @@
         </div> -->
       </div>
     </div>
-    </div>
+    
 
     <div class="row mt-3">
       <div class="col-2 mt-2" style="text-align: right;">
@@ -106,15 +106,30 @@
         <mat-label> Date </mat-label>
       </div>
       <div class="col-4">       
-          <input class="form-control" formControlName="date" matInput [matDatepicker]="picker">
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>        
+        <input class="form-control" formControlName="date" matInput [matDatepicker]="picker">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>        
+    </div>
+      <div class="col-2 mt-2" style="text-align: right;">
+        <mat-label> User Code </mat-label>
+      </div>
+      <div class="col-4">
+        <input class="form-control" formControlName="userCode" disabled>
       </div>
     </div>
-  </div>
 
   <div mat-dialog-actions class="mt-3" style="float: right;">
     <button mat-raised-button type="submit" class="btn-submit">Save</button>
     <a mat-raised-button class="btn-cancle"(click)="canCle(false)">Cancel</a>
   </div>
+  </form>
+
+  <swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#82dcc3"
+  [showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
+</swal>
+<swal #saveSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="canCle(true)" [width]="480">
+</swal>
+
+  
+
   
