--- a/TimeSheet-Web/src/app/modules/user-profile/edit-user-profile-dialog/edit-user-profile-dialog.component.html
+++ b/TimeSheet-Web/src/app/modules/user-profile/edit-user-profile-dialog/edit-user-profile-dialog.component.html
@@ -1,138 +1,85 @@
-
-    <div class="row headTilteDialog">
-        <h3 mat-dialog-title>User Profile</h3>
-      </div>
+<div class="page-main2">
+  <div class="row headTilteDialog">
+      <h3 mat-dialog-title>Edit UserProfile</h3>
+    </div>
+    <form [formGroup]="editProfile" (ngSubmit)="onSubmit()">
     
-        <div mat-dialog-content>
-          <div class="row mt-3">
-            <div class="col-2 mt-2" style="text-align: right;">
-              <mat-label> First Name </mat-label>
-            </div>
-            <div class="col-4">
-              <input class="form-control" formControlName="name"
-                [ngClass]="{'is-invalid': submitted && f.name.errors}">
-              <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-                <div *ngIf="f.name.errors.required" class="text-danger help-block">
-                  {{'Name' | mandatoryfield}}
-                </div>
-              </div>
-              <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-                <div *ngIf="f.name.errors.whitespace" class="text-danger help-block">
-                  {{'Name' | mandatoryfield}}
-                </div>
-              </div>
-            </div>
-            <div class="col-2 mt-2" style="text-align: right;">
-              <mat-label> Last Name </mat-label>
-            </div>
-            <div class="col-4">
-              <input class="form-control" formControlName="lastName"
-                [ngClass]="{'is-invalid': submitted && f.lastName.errors}">
-              <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-                <div *ngIf="f.lastName.errors.required" class="text-danger help-block">
-                  {{'Last Name' | mandatoryfield}}
-                </div>
-              </div>
-              <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-                <div *ngIf="f.lastName.errors.whitespace" class="text-danger help-block">
-                  {{'Last Name' | mandatoryfield}}
-                </div>
-              </div>
-            </div>
+        <div class="row mt-3">
+          <div class="col-2 mt-2" style="text-align: right;">
+            <mat-label> First Name </mat-label>
           </div>
-          <div class="row mt-3">
-            <div class="col-2 mt-2" style="text-align: right;">
-              <mat-label> Birth Of Date </mat-label>
-            </div>
-            <div class="col-4">
-              <mat-form-field appearance="outline">
-                <mat-label>Choose a date</mat-label>
-                <input matInput [matDatepicker]="picker" matInput placeholder="Placeholder">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-              </mat-form-field>
-            </div>
-            <div class="col-2 mt-2" style="text-align: right;">
-              <mat-label> Age </mat-label>
-            </div>
-            <div class="col-4">
-              <input class="form-control" formControlName="age"
-                [ngClass]="{'is-invalid': submitted && f.age.errors}">
-              <div *ngIf="submitted && f.age.errors" class="invalid-feedback">
-                <div *ngIf="f.age.errors.required" class="text-danger help-block">
-                  {{'Age' | mandatoryfield}}
-                </div>
-              </div>
-              <div *ngIf="submitted && f.age.errors" class="invalid-feedback">
-                <div *ngIf="f.age.errors.whitespace" class="text-danger help-block">
-                  {{'Age' | mandatoryfield}}
-                </div>
-              </div>
-            </div>
+          <div class="col-4">
+            <input class="form-control"  formControlName="firstName">
+  
           </div>
-          <div class="row mt-3">
-            <div class="col-2 mt-2" style="text-align: right;">
-              <mat-label> Address </mat-label>
-            </div>
-            <div class="col-10">
-              <textarea class="form-control" formControlName="address"
-                [ngClass]="{'is-invalid': submitted && f.address.errors}"></textarea>
-              <div *ngIf="submitted && f.address.errors" class="invalid-feedback">
-                <div *ngIf="f.address.errors.required" class="text-danger help-block">
-                  {{'address' | mandatoryfield}}
-                </div>
-              </div>
-              <div *ngIf="submitted && f.address.errors" class="invalid-feedback">
-                <div *ngIf="f.address.errors.whitespace" class="text-danger help-block">
-                  {{'address' | mandatoryfield}}
-                </div>
-              </div>
-            </div>
+          <div class="col-2 mt-2" style="text-align: right;">
+            <mat-label> Last Name </mat-label>
           </div>
-          <div class="row mt-3">
-            <div class="col-2 mt-2" style="text-align: right;">
-              <mat-label> Position </mat-label>
-            </div>
-            <div class="col-4">
-              <input class="form-control" formControlName="position" [ngClass]="{'is-invalid': submitted && f.engName.errors}">
-              <div *ngIf="submitted && f.position.errors" class="invalid-feedback">
-                <div *ngIf="f.position.errors.required" class="text-danger help-block">
-                  {{'Position' | mandatoryfield}}
-                </div>
-              </div>
-              <div *ngIf="submitted && f.position.errors" class="invalid-feedback">
-                <div *ngIf="f.position.errors.whitespace" class="text-danger help-block">
-                  {{'Position' | mandatoryfield}}
-                </div>
-              </div>
-            </div>
-            <div class="col-2 mt-2" style="text-align: right;">
-              <mat-label> Site </mat-label>
-            </div>
-            <div class="col-4">
-              <input class="form-control" formControlName="site" 
-                [ngClass]="{'is-invalid': submitted && f.email.errors}">
-              <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
-                <div *ngIf="f.site.errors.required" class="text-danger help-block">
-                  {{'Site' | mandatoryfield}}
-                </div>
-              </div>
-              <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
-                <div *ngIf="f.site.errors.whitespace" class="text-danger help-block">
-                  {{'Site' | mandatoryfield}}
-                </div>
-              </div>
-            </div>
-          </div>
-    
-          <div class="row mt-3">
-
+          <div class="col-4">
+            <input class="form-control"  formControlName="lastName">
+  
           </div>
         </div>
-    
-        <div mat-dialog-actions class="mt-3" style="float: right;">
-          <button mat-button type="submit" class="btn-submit">Save</button>&nbsp;
-          <a mat-raised-button class="btn-cancle"(click)="canCle(false)">Cancel</a>
+        
+        <div class="row mt-3">
+          
+          <div class="col-2 mt-2" style="text-align: right;">
+            <mat-label> Birth Of Date </mat-label>
+          </div>
+          <div class="col-4">       
+              <input class="form-control" formControlName="birthday" matInput [matDatepicker]="picker">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>        
+          </div>
+  
+          <div class="col-2 mt-2" style="text-align: right;">
+            <mat-label> Age </mat-label>
+          </div>
+          <div class="col-4">
+            <input class="form-control" formControlName="age">
+  
+          </div>
         </div>
-
-    
+  
+        <div class="row mt-3">
+          <div class="col-2 mt-2" style="text-align: right;">
+            <mat-label> Address </mat-label>
+          </div>
+          <div class="col-4">
+            <textarea class="form-control" formControlName="address"></textarea>
+  
+          </div>
+          <div class="col-2 mt-2" style="text-align: right;">
+            <mat-label> Position </mat-label>
+          </div>
+          <div class="col-4">
+            <input class="form-control" formControlName="position">         
+          </div>
+        </div>
+  
+        <div class="row mt-3">
+          <div class="col-2 mt-2" style="text-align: right;">
+            <mat-label> Site </mat-label>
+          </div>
+          <div class="col-4">
+            <input class="form-control" formControlName="site">
+  
+          </div>
+        </div>
+      <div mat-dialog-actions  class="mt-3" style="float: right;">
+        <button mat-raised-button class="btn-submit" type="submit">Save</button>    
+        <button mat-raised-button class="btn-cancle" (click)="canCle()">Cancle</button>     
+      </div>    
+    </form>
+  
+      <swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#82dcc3"
+      [showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
+    </swal>
+    <swal #saveSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="getUserProfile()" [width]="480">
+    </swal>
+  </div>
+  
+  
+  
+  
+  
