--- a/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
+++ b/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
@@ -22,6 +22,7 @@
       </div>
       
       <div class="row mt-3">
+        
         <div class="col-2 mt-2" style="text-align: right;">
           <mat-label> Birth Of Date </mat-label>
         </div>
@@ -64,16 +65,21 @@
           <input class="form-control" formControlName="site">
 
         </div>
-      </div>    
-  </form>
-
+      </div>
     <div mat-dialog-actions  class="mt-3" style="float: right;">
-      <!-- <button mat-raised-button class="btn-submit" type="submit"  (click)="onSave()">Save</button>&nbsp; -->
       <button mat-raised-button class="btn-submit" type="submit">Save</button>&nbsp;
       <button mat-raised-button type="submit" class="btn-submit" (click)="openDialogEdit()">Edit</button>&nbsp;
       <button mat-raised-button class="btn-cancle" (click)="back()">Back</button>
-    </div>
+    </div>    
+  </form>
+
+    <swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#82dcc3"
+    [showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
+  </swal>
+  <swal #saveSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="getUserProfile()" [width]="480">
+  </swal>
 </div>
+
 
 
 
