--- a/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
@@ -1,24 +1,49 @@
 <div class="page-main">
-    <div class="row headTilteDialog">
-        <h3 mat-dialog-title>Dash Board</h3>
+  <div class="row headTilteDialog">
+    <h3 mat-dialog-title>Dash Board</h3>
+  </div>
+  <div class="row">
+    <div class="col-6">
+      <div> <a style="font-size: 1.75rem;">DASHBOARD</a></div>
     </div>
-    <div class="row">
-        <div class="col-6">
-          <div> <a style="font-size: 1.75rem;">DASHBOARD</a></div>
-        </div>
-        <div class="col-6" style="text-align: right;">
-          <button mat-raised-button class="btn-submit" (click)="goAttendance()">
-            <mat-icon>library_books</mat-icon>
-            Go Attendance
-          </button>&nbsp;
-          <button mat-raised-button class="btn-submit" (click)="goSupervisor()">
-            <mat-icon>supervisor_account</mat-icon>
-            Go Supervisor
-          </button>&nbsp;
-          <button mat-raised-button class="btn-submit" (click)="back()">
-            <mat-icon>supervisor_account</mat-icon>
-            Logout
-          </button>&nbsp;
-        </div>
-      </div><br>
+    <div class="col-6" style="text-align: right;">
+      <button mat-raised-button class="btn-submit" (click)="goAttendance()">
+        <mat-icon>library_books</mat-icon>
+        Go Attendance
+      </button>&nbsp;
+      <button mat-raised-button class="btn-submit" (click)="goSupervisor()">
+        <mat-icon>supervisor_account</mat-icon>
+        Go Supervisor
+      </button>&nbsp;
+      <button mat-raised-button class="btn-submit" (click)="back()">
+        <mat-icon>supervisor_account</mat-icon>
+        Logout
+      </button>&nbsp;
+    </div>
+  </div><br>
+  
+
+  <div class="row mt-4">
+    <div class="col-3 mt-3">
+      <mat-card class="example-card">
+        <mat-card-header style="cursor: pointer;">
+          <!-- <img mat-card-avatar class="example-header-image" src="./assets/img/coop.png"> -->
+          <mat-card-title>xxxxxxx</mat-card-title>
+          <mat-card-subtitle>yyyyyyyyy</mat-card-subtitle>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-actions style="text-align: center">
+          <button mat-button class="card-button">
+            <mat-icon>edit</mat-icon> Edit
+          </button>
+          <button mat-button class="card-button">
+            <mat-icon>delete_forever</mat-icon> Delete
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </div>
+
 </div>
+
+
