Edit dashboard & add Dialog assign

--- a/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
@@ -1,12 +1,26 @@
 <div class="page-main">
   <div class="row headTilteDialog">
-    <h3 mat-dialog-title>Dash Board</h3>
+    <h3 mat-dialog-title>Time Sheet</h3>
+          <span class="example-spacer"></span>
+          <!-- <span class="mt-2">{{userCode}}</span> -->
+          <button type="button" mat-icon-button [matMenuTriggerFor]="appMenu">
+              <mat-icon aria-label="Side nav toggle icon">account_circle</mat-icon>
+          </button>
+          <mat-menu #appMenu="matMenu">
+              <button mat-menu-item (click)="logout()">
+                  <mat-icon>input</mat-icon> Logout
+              </button>
+          </mat-menu>
   </div>
   <div class="row">
     <div class="col-6">
       <div> <a style="font-size: 1.75rem;">DASHBOARD</a></div>
     </div>
     <div class="col-6" style="text-align: right;">
+      <button mat-raised-button class="btn-submit" (click)="onDialogAssign()">
+        <mat-icon>assignment_return</mat-icon>
+        Assign Project 
+    </button>&nbsp;
       <button mat-raised-button class="btn-submit" (click)="goAttendance()">
         <mat-icon>library_books</mat-icon>
         Go Attendance
@@ -15,18 +29,18 @@
         <mat-icon>supervisor_account</mat-icon>
         Go Supervisor
       </button>&nbsp;
-      <button mat-raised-button class="btn-submit" (click)="back()">
+      <!-- <button mat-raised-button class="btn-submit" (click)="back()">
         <mat-icon>supervisor_account</mat-icon>
         Logout
-      </button>&nbsp;
+      </button>&nbsp; -->
     </div>
   </div><br>
   
 
   <div class="row mt-4">
-    <div class="col-3 mt-3">
+    <div class="col-3 mt-3" >
       <mat-card class="example-card">
-        <mat-card-header style="cursor: pointer;">
+        <mat-card-header style="cursor: pointer;" (click)="goUserProject()">
           <!-- <img mat-card-avatar class="example-header-image" src="./assets/img/coop.png"> -->
           <mat-card-title>xxxxxxx</mat-card-title>
           <mat-card-subtitle>yyyyyyyyy</mat-card-subtitle>
