--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -1,4 +1,7 @@
 <div class="page-main">
+  <div class="row headTilteDialog">
+    <h3 mat-dialog-title>Time Sheet</h3>
+  </div>
 <div class="row">
     <div class="col-6">
       <div> <a style="font-size: 1.75rem;">Attendance List</a></div>
