--- a/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
+++ b/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
@@ -1,6 +1,10 @@
 <div class="page-main2">
-<div class="row headTilteDialog">
-    <h3 mat-dialog-title>User Profile</h3>
+  <div class="row headTilteDialog">
+    <h3 mat-dialog-title>Time Sheet</h3>
+  </div>
+
+  <div class="col-12">
+    <div> <a style="font-size: 1.75rem;">User Profile</a></div>
   </div>
   <form [formGroup]="createProfile" (ngSubmit)="onSubmit()">
   
