--- a/TimeSheet-Web/src/app/modules/dashboard/dialog-assign/dialog-assign.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/dialog-assign/dialog-assign.component.html
@@ -2,20 +2,20 @@
   <h2 mat-dialog-title>Assign Project</h2>
 </div><br>
 
-
+<form [formGroup]="createAssign" (ngSubmit)="onSubmit()">
   <div class="row mt-3">
     <div class="col-2 mt-2" style="text-align: right;">
       <mat-label>User Code</mat-label>
     </div>
     <div class="col-4">
-      <input class="form-control" formControlName="project" >
+      <input class="form-control" formControlName="userCode" >
 
     </div>
     <div class="col-2 mt-2" style="text-align: right;">
       <mat-label> Project </mat-label>
     </div>
     <div class="col-4">
-      <input class="form-control" formControlName="site" >
+      <input class="form-control" formControlName="project" >
 
     </div>
   </div>
@@ -34,19 +34,29 @@
     <div class="col-2 mt-2" style="text-align: right;">
       <mat-label> Date </mat-label>
     </div>
-    <div class="input-group" class="col-4">
-      <input formControlName="date" class="form-control" [matDatepicker]="pickerStart">
-      <div class="input-group-append">
-        <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
-        <mat-datepicker #pickerStart></mat-datepicker>
+        <div class="input-group" class="col-4">
+          <input formControlName="date" class="form-control" [matDatepicker]="pickerStart">
+          <div class="input-group-append">
+              <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
+              <mat-datepicker #pickerStart></mat-datepicker>
+          </div>
       </div>
+    <!-- <div class="col-2 mt-2" style="text-align: right;">
+      <mat-label> User Code </mat-label>
     </div>
+    <div class="col-4">
+      <input class="form-control" formControlName="userCode" disabled>
+    </div> -->
   </div>
-
-
-
 
 <div mat-dialog-actions class="mt-3" style="float: right;">
   <button mat-raised-button type="submit" class="btn-submit">Save</button>
-  <a mat-raised-button class="btn-cancle" (click)="closeDialog(false)">Cancel</a>
+  <a mat-raised-button class="btn-cancle" (click)="canCle(false)">Cancel</a>
 </div>
+</form>
+
+<swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#82dcc3"
+[showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
+</swal>
+<swal #saveSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="canCle(true)" [width]="480">
+</swal>
