--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -1,10 +1,13 @@
 <div class="page-main">
 
-<div class="row">
-    <div class="col-6">
+  <div class="row">
+    <div class="col-12">
       <div> <a style="font-size: 1.75rem;">Attendance List</a></div>
     </div>
-    <div class="col-6" style="text-align: right;">
+  </div>
+
+  <div class="row">
+    <div class="col-12" style="text-align: right;">
       <button mat-raised-button class="btn-submit" (click)="openDialogAdd()">
         <mat-icon>library_books</mat-icon>
         View History
@@ -12,8 +15,9 @@
       <button mat-raised-button class="btn-submit" (click)="openDialogAdd()">
         <mat-icon>assessment</mat-icon>
         Add Attendance List
-      </button>&nbsp;
-  </div><br> 
+      </button>
+    </div>
+  </div>&nbsp;
 
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
@@ -21,13 +25,13 @@
     <ng-container matColumnDef="date">
       <th mat-header-cell *matHeaderCellDef> Date </th>
       <td mat-cell *matCellDef="let element"> {{element.date}} </td>
-    </ng-container>  
+    </ng-container>
 
     <ng-container matColumnDef="project">
       <th mat-header-cell *matHeaderCellDef> Project </th>
       <td mat-cell *matCellDef="let element"> {{element.project}} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="site">
       <th mat-header-cell *matHeaderCellDef> Site </th>
       <td mat-cell *matCellDef="let element"> {{element.site}} </td>
@@ -47,9 +51,8 @@
       <th mat-header-cell *matHeaderCellDef> Time-Out </th>
       <td mat-cell *matCellDef="let element"> {{element.timeOut}} </td>
     </ng-container>
-  
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </div>
-
