--- a/TimeSheet-Web/src/app/modules/user-profile/edit-user-profile-dialog/edit-user-profile-dialog.component.html
+++ b/TimeSheet-Web/src/app/modules/user-profile/edit-user-profile-dialog/edit-user-profile-dialog.component.html
@@ -9,14 +9,14 @@
             <mat-label> First Name </mat-label>
           </div>
           <div class="col-4">
-            <input class="form-control"  formControlName="firstName">
+            <input class="form-control"  formControlName="firstName" disabled>
   
           </div>
           <div class="col-2 mt-2" style="text-align: right;">
             <mat-label> Last Name </mat-label>
           </div>
           <div class="col-4">
-            <input class="form-control"  formControlName="lastName">
+            <input class="form-control"  formControlName="lastName" disabled>
   
           </div>
         </div>
@@ -55,7 +55,7 @@
             <mat-label> Position </mat-label>
           </div>
           <div class="col-4">
-            <input class="form-control" formControlName="position">         
+            <input class="form-control" formControlName="position" disabled>         
           </div>
         </div>
   
@@ -64,22 +64,21 @@
             <mat-label> Site </mat-label>
           </div>
           <div class="col-4">
-            <input class="form-control" formControlName="site">
+            <input class="form-control" formControlName="site" disabled>
   
           </div>
         </div>
       <div mat-dialog-actions  class="mt-3" style="float: right;">
         <button mat-raised-button class="btn-submit" type="submit">Save</button>    
-        <button mat-raised-button class="btn-cancle" (click)="canCle(false)">Cancle</button>     
+        <a mat-raised-button class="btn-cancle" (click)="canCle(false)">Cancle</a>     
       </div>    
     </form>
-  
-      <swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#82dcc3"
-      [showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
-    </swal>
-    <swal #saveSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="canCle(true)" [width]="480">
-    </swal>
   </div>
+  <swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#82dcc3"
+  [showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
+</swal>
+<swal #saveSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="canCle(true)" [width]="480">
+</swal>
   
   
   
