--- a/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.scss
+++ b/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.scss
@@ -1,5 +1,9 @@
+.example-card{
+  color: #ABEBC6; 
+  font-size: 32px;
+  font-family: "CSChatThai", roboto;
+}
 
-  .example-spacer {
-    margin-right: 88%;
-  }
+
+
 
