--- a/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
@@ -17,12 +17,12 @@
 
   <div class="row">
     <div class="col-3 mt-3" >
-      <mat-card class="example-card">
-        <mat-card-header style="cursor: pointer;" (click)="goUserProject()">
-          <!-- <img mat-card-avatar class="example-header-image" src="./assets/img/coop.png"> -->
-          <mat-card-title>xxxxxxx</mat-card-title>
-          <mat-card-subtitle>yyyyyyyyy</mat-card-subtitle>
+      <mat-card style="cursor: pointer;">
+        <mat-card-header style="place-content: center;" (click)="goUserProject()">
+          <!-- <img mat-card-avatar class="example-header-image" src="./assets/img/timesheet.png"> -->
+          <mat-card-title class="example-card" >Project A</mat-card-title>          
         </mat-card-header>
+        <mat-card-content style="text-align: center;">Description</mat-card-content>
         <mat-divider></mat-divider>
         <mat-card-actions style="text-align: center">
           <button mat-button class="card-button">
