--- a/TimeSheet-Web/src/app/modules/dashboard/dialog-assign/dialog-assign.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/dialog-assign/dialog-assign.component.html
@@ -8,8 +8,12 @@
       <mat-label>User Code</mat-label>
     </div>
     <div class="col-4">
-      <input class="form-control" formControlName="userCode" >
-
+      <mat-select class="form-control" formControlName="userCodeEmployee"
+      [ngClass]="{'is-invalid': submitted && f.userCodeEmployee.errors}">
+        <mat-option *ngFor="let userCodeEmployee of userCodeEmployees " [value]="userCodeEmployee.type">
+            {{userCodeEmployee.name}}
+        </mat-option>
+    </mat-select>
     </div>
     <div class="col-2 mt-2" style="text-align: right;">
       <mat-label> Project </mat-label>
@@ -41,12 +45,12 @@
               <mat-datepicker #pickerStart></mat-datepicker>
           </div>
       </div>
-    <!-- <div class="col-2 mt-2" style="text-align: right;">
-      <mat-label> User Code </mat-label>
+    <div class="col-2 mt-2" style="text-align: right;">
+      <mat-label> User Code Sup </mat-label>
     </div>
     <div class="col-4">
-      <input class="form-control" formControlName="userCode" disabled>
-    </div> -->
+      <input class="form-control" formControlName="userCodeSup" disabled>
+    </div>
   </div>
 
 <div mat-dialog-actions class="mt-3" style="float: right;">
