--- a/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
+++ b/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
@@ -8,6 +8,11 @@
 
   
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="userCode">
+        <th mat-header-cell *matHeaderCellDef> User Code </th>
+        <td mat-cell *matCellDef="let element"> {{element.userCode}} </td>
+      </ng-container>
   
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef> Date </th>
@@ -19,16 +24,15 @@
         <td mat-cell *matCellDef="let element"> {{element.project}} </td>
       </ng-container>
     
-      <ng-container matColumnDef="site">
-        <th mat-header-cell *matHeaderCellDef> Site </th>
-        <td mat-cell *matCellDef="let element"> {{element.site}} </td>
-      </ng-container>
-  
       <ng-container matColumnDef="task">
         <th mat-header-cell *matHeaderCellDef> Task </th>
         <td mat-cell *matCellDef="let element"> {{element.task}} </td>
-      </ng-container>  
+      </ng-container>
 
+      <ng-container matColumnDef="userCodeSup">
+        <th mat-header-cell *matHeaderCellDef> User Code Sup </th>
+        <td mat-cell *matCellDef="let element"> {{element.userCodeSub}} </td>
+      </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
