--- a/TimeSheet-Web/src/app/modules/dashboard/dialog-assign/dialog-assign.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/dialog-assign/dialog-assign.component.html
@@ -5,15 +5,18 @@
 <form [formGroup]="createAssign" (ngSubmit)="onSubmit()">
   <div class="row mt-3">
     <div class="col-2 mt-2" style="text-align: right;">
-      <mat-label>User Code</mat-label>
+      <mat-label>User Code Supervisor</mat-label>
     </div>
-    <div class="col-4">
+    <!-- <div class="col-4">
       <mat-select class="form-control" formControlName="userCodeEmployee"
       [ngClass]="{'is-invalid': submitted && f.userCodeEmployee.errors}">
         <mat-option *ngFor="let userCodeEmployee of userCodeEmployees " [value]="userCodeEmployee.type">
             {{userCodeEmployee.name}}
         </mat-option>
     </mat-select>
+    </div> -->
+    <div class="col-4">
+      <input class="form-control" formControlName="userCodeSup" disabled>
     </div>
     <div class="col-2 mt-2" style="text-align: right;">
       <mat-label> Project </mat-label>
@@ -45,12 +48,12 @@
               <mat-datepicker #pickerStart></mat-datepicker>
           </div>
       </div>
-    <div class="col-2 mt-2" style="text-align: right;">
-      <mat-label> User Code Sup </mat-label>
+    <!-- <div class="col-2 mt-2" style="text-align: right;">
+      <mat-label> User Code Supervisor </mat-label>
     </div>
     <div class="col-4">
       <input class="form-control" formControlName="userCodeSup" disabled>
-    </div>
+    </div> -->
   </div>
 
 <div mat-dialog-actions class="mt-3" style="float: right;">
