--- a/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
+++ b/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
@@ -6,6 +6,15 @@
       </div>
     </div><br>   
 
+    <div class="row">
+      <div class="col-12" style="text-align: right;">
+        <button mat-raised-button class="btn-submit" (click)="openDialogAddUser()">
+          <mat-icon>assessment</mat-icon>
+          Add Attendance List
+        </button>
+      </div>
+    </div><br>
+
   
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
@@ -13,11 +22,6 @@
         <th mat-header-cell *matHeaderCellDef> User Code </th>
         <td mat-cell *matCellDef="let element"> {{element.userCode}} </td>
       </ng-container>
-  
-      <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef> Date </th>
-        <td mat-cell *matCellDef="let element"> {{element.date}} </td>
-      </ng-container>  
   
       <ng-container matColumnDef="project">
         <th mat-header-cell *matHeaderCellDef> Project </th>
@@ -29,10 +33,10 @@
         <td mat-cell *matCellDef="let element"> {{element.task}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="userCodeSup">
-        <th mat-header-cell *matHeaderCellDef> User Code Sup </th>
-        <td mat-cell *matCellDef="let element"> {{element.userCodeSub}} </td>
-      </ng-container>
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef> Date </th>
+        <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+      </ng-container>  
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
