--- a/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
+++ b/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
@@ -1,44 +1,48 @@
 <div class="page-main">
 
   <div class="row">
-      <div class="col-6">
-        <div> <a style="font-size: 1.75rem;">User Project</a></div>
-      </div>
-    </div><br>   
+    <div class="col-6">
+      <div> <a style="font-size: 1.75rem;">User Project</a></div>
+    </div>
+  </div><br>
 
-    <div class="row">
-      <div class="col-12" style="text-align: right;">
-        <button mat-raised-button class="btn-submit" (click)="openDialogAddUser()">
-          <mat-icon>assessment</mat-icon>
-          Add Attendance List
-        </button>
-      </div>
-    </div><br>
+  <div class="row">
+    <div class="col-12" style="text-align: right;">
+      <button mat-raised-button class="btn-submit" (click)="openDialogAddUser()">
+        <mat-icon>assessment</mat-icon>
+        Add User Project
+      </button>
+    </div>
+  </div><br>
 
-  
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-      <ng-container matColumnDef="userCode">
-        <th mat-header-cell *matHeaderCellDef> User Code </th>
-        <td mat-cell *matCellDef="let element"> {{element.userCode}} </td>
-      </ng-container>
-  
-      <ng-container matColumnDef="project">
-        <th mat-header-cell *matHeaderCellDef> Project </th>
-        <td mat-cell *matCellDef="let element"> {{element.project}} </td>
-      </ng-container>
-    
-      <ng-container matColumnDef="task">
-        <th mat-header-cell *matHeaderCellDef> Task </th>
-        <td mat-cell *matCellDef="let element"> {{element.task}} </td>
-      </ng-container>
+  <div class="row mt-3">
+    <div class="col-sm-12 col-md-12">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-      <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef> Date </th>
-        <td mat-cell *matCellDef="let element"> {{element.date}} </td>
-      </ng-container>  
-    
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+        <ng-container matColumnDef="userCode">
+          <th mat-header-cell *matHeaderCellDef> User Code </th>
+          <td mat-cell *matCellDef="let element"> {{element.userCode}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="project">
+          <th mat-header-cell *matHeaderCellDef> Project </th>
+          <td mat-cell *matCellDef="let element"> {{element.project}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="task">
+          <th mat-header-cell *matHeaderCellDef> Task </th>
+          <td mat-cell *matCellDef="let element"> {{element.task}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef> Date </th>
+          <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
   </div>
+</div>
