--- a/TimeSheet-Web/src/app/core/app-nev-bar/app-nev-bar.component.html
+++ b/TimeSheet-Web/src/app/core/app-nev-bar/app-nev-bar.component.html
@@ -22,7 +22,7 @@
                     <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
                 </button>
                 <span class="example-spacer"></span>
-                <span class="mt-2">{{userCode2}}</span>
+                <span class="mt-2">{{dataProfile.userCode}}</span>
                 <button type="button" mat-icon-button [matMenuTriggerFor]="appMenu">
                     <mat-icon aria-label="Side nav toggle icon">account_circle</mat-icon>
                 </button>
