--- a/TimeSheet-Web/src/app/modules/dashboard/dialog-assign/dialog-assign.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/dialog-assign/dialog-assign.component.html
@@ -5,14 +5,14 @@
 <form [formGroup]="createAssignProject" (ngSubmit)="onSubmit()">
   <div class="row mt-3">
     <div class="col-2 mt-2" style="text-align: right;">
-      <mat-label>User Code Supervisor</mat-label>
+      <mat-label>Project Code</mat-label>
     </div>
     <div class="col-4">
-      <input class="form-control" formControlName="userCodeSupervisor" disabled>
+      <input class="form-control" formControlName="projectCode">
     </div>
     
     <div class="col-2 mt-2" style="text-align: right;">
-      <mat-label> Project </mat-label>
+      <mat-label> Project Name</mat-label>
     </div>
     <div class="col-4">
       <input class="form-control" formControlName="projectName" >
@@ -41,12 +41,12 @@
               <mat-datepicker #pickerStart></mat-datepicker>
           </div>
       </div>
-    <!-- <div class="col-2 mt-2" style="text-align: right;">
+    <div class="col-2 mt-2" style="text-align: right;">
       <mat-label> User Code Supervisor </mat-label>
     </div>
     <div class="col-4">
-      <input class="form-control" formControlName="userCodeSup" disabled>
-    </div> -->
+      <input class="form-control" formControlName="userCodeSupervisor" disabled>
+    </div>
   </div>
 
 <div mat-dialog-actions class="mt-3" style="float: right;">
