--- a/TimeSheet-Web/src/app/modules/dashboard/dialog-assign/dialog-assign.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/dialog-assign/dialog-assign.component.html
@@ -8,14 +8,25 @@
       <mat-label>Project Code</mat-label>
     </div>
     <div class="col-4">
-      <input class="form-control" formControlName="projectCode">
+      <input class="form-control" formControlName="projectCode"
+        [ngClass]="{'is-invalid': submitted && f.projectCode.errors}">
+      <div *ngIf="submitted && f.projectCode.errors" class="invalid-feedback">
+        <div *ngIf="f.projectCode.errors.required" class="text-danger help-block">
+          {{'projectCode' | mandatoryfield}}
+        </div>
+      </div>
+      <div *ngIf="submitted && f.projectCode.errors" class="invalid-feedback">
+        <div *ngIf="f.projectCode.errors.whitespace" class="text-danger help-block">
+          {{'projectCode' | mandatoryfield}}
+        </div>
+      </div>
     </div>
-    
+
     <div class="col-2 mt-2" style="text-align: right;">
       <mat-label> Project Name</mat-label>
     </div>
     <div class="col-4">
-      <input class="form-control" formControlName="projectName" >
+      <input class="form-control" formControlName="projectName">
 
     </div>
   </div>
@@ -25,7 +36,7 @@
       <mat-label> Description </mat-label>
     </div>
     <div class="col-10">
-      <textarea class="form-control" formControlName="description" ></textarea>
+      <textarea class="form-control" formControlName="description"></textarea>
 
     </div>
   </div>
@@ -34,13 +45,13 @@
     <div class="col-2 mt-2" style="text-align: right;">
       <mat-label> Date </mat-label>
     </div>
-        <div class="input-group" class="col-4">
-          <input formControlName="date" class="form-control" [matDatepicker]="pickerStart">
-          <div class="input-group-append">
-              <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
-              <mat-datepicker #pickerStart></mat-datepicker>
-          </div>
+    <div class="input-group" class="col-4">
+      <input formControlName="date" class="form-control" [matDatepicker]="pickerStart">
+      <div class="input-group-append">
+        <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
+        <mat-datepicker #pickerStart></mat-datepicker>
       </div>
+    </div>
     <div class="col-2 mt-2" style="text-align: right;">
       <mat-label> User Code Supervisor </mat-label>
     </div>
@@ -49,14 +60,14 @@
     </div>
   </div>
 
-<div mat-dialog-actions class="mt-3" style="float: right;">
-  <button mat-raised-button type="submit" class="btn-submit">Save</button>
-  <a mat-raised-button class="btn-cancle" (click)="canCle(false)">Cancel</a>
-</div>
+  <div mat-dialog-actions class="mt-3" style="float: right;">
+    <button mat-raised-button type="submit" class="btn-submit">Save</button>
+    <a mat-raised-button class="btn-cancle" (click)="canCle(false)">Cancel</a>
+  </div>
 </form>
 
 <swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#82dcc3"
-[showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
+  [showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
 </swal>
 <swal #saveSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="canCle(true)" [width]="480">
 </swal>
