--- a/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
+++ b/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
@@ -22,12 +22,12 @@
 
         <ng-container matColumnDef="userCode">
           <th mat-header-cell *matHeaderCellDef> User Code </th>
-          <td mat-cell *matCellDef="let element"> {{element.id.userCode}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.id.userCode.userCode}} </td>
         </ng-container>
 
         <ng-container matColumnDef="project">
           <th mat-header-cell *matHeaderCellDef> Project Code</th>
-          <td mat-cell *matCellDef="let element"> {{element.id.projectCode}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.id.projectCode.projectCode}} </td>
         </ng-container>
 
         <ng-container matColumnDef="task">
