--- a/TimeSheet-Web/src/app/modules/user-project/add-user-project-dialog/add-user-project-dialog.component.html
+++ b/TimeSheet-Web/src/app/modules/user-project/add-user-project-dialog/add-user-project-dialog.component.html
@@ -7,10 +7,6 @@
     <div class="col-2 mt-2" style="text-align: right;">
       <mat-label>User Code</mat-label>
     </div>
-    <!-- <div class="col-4">
-        <input class="form-control" formControlName="userCode" >
-  
-      </div> -->
     <div class="col-4">
       <mat-select class="form-control" formControlName="userCode" name="userCode">
         <mat-option *ngFor="let data of dataUserProject " [value]="data.userCode">
@@ -23,8 +19,18 @@
       <mat-label> Project Code</mat-label>
     </div>
     <div class="col-4">
-      <input class="form-control" formControlName="projectCode">
-
+      <input class="form-control" formControlName="projectCode"
+      [ngClass]="{'is-invalid': submitted && f.projectCode.errors}">
+      <div *ngIf="submitted && f.projectCode.errors" class="invalid-feedback">
+        <div *ngIf="f.projectCode.errors.required" class="text-danger help-block">
+          {{'Project Code' | mandatoryfield}}
+        </div>
+      </div>
+      <div *ngIf="submitted && f.projectCode.errors" class="invalid-feedback">
+        <div *ngIf="f.projectCode.errors.whitespace" class="text-danger help-block">
+          {{'Project Code' | mandatoryfield}}
+        </div>
+      </div>
     </div>
   </div>
 
@@ -33,7 +39,8 @@
       <mat-label> Task </mat-label>
     </div>
     <div class="col-10">
-      <textarea class="form-control" formControlName="task" [ngClass]="{'is-invalid': submitted && f.task.errors}"></textarea>
+      <textarea class="form-control" formControlName="task" 
+      [ngClass]="{'is-invalid': submitted && f.task.errors}"></textarea>
       <div *ngIf="submitted && f.task.errors" class="invalid-feedback">
         <div *ngIf="f.task.errors.required" class="text-danger help-block">
           {{'task' | mandatoryfield}}
@@ -44,7 +51,6 @@
           {{'task' | mandatoryfield}}
         </div>
       </div>
-
     </div>
   </div>
 
